# axwifi

./: Makefile.am  _configure  config.site.debug  configure.ac
samples/: debug64.rate54000.snr25.nmsgs2.msglen500.scale1.41.txpkt.dat_trace_skip_0_ns_4640.c
wifi54/: Makefile.am  Makefile.am.traceconf  Makefile.am.traceconf.dev  atoms.ethreader.or  atoms.or  atoms.tracereader.or  atoms.tx.or  code_placement.or  configurator.c  debug.or  dstmacaddr.c  fifos.or  fifos.tx.or  setup.c  states.or  states.tx.or
wifi54/scripts/: eth_send_samples.py  usrp.py  usrp.sh  usrp_tx_test.py
wifi54/trace/: conf_10mhz.py  genplots
wifi54lcp/: Makefile.am  Makefile.am.traceconf  README  atoms.or  atoms.tracereader.or  configurator.c  debug.or  dstmacaddr.c  fifos.or  main.c  setup.c  setup.h  states.or
wifi54lcp/scripts/: debug.sh  usrp.py
wifirx54m/: Makefile.am  Makefile.am.inc  atoms.txt  fifos.txt  main.c  setup.c  setup.h  states.txt
wifirx54m/samples/: trace_54mbps_skip_400000_ns_10000.c  trace_6mbps_skip_400000_ns_10000.c
wifirx54mc/: Makefile.am  atoms.txt  code_placement.txt  code_placement.txt.all  code_placement.txt.bak  cptrace  debug.txt  fifos.txt  main.c  setup.c  setup.h  states.txt  trace.c
wifirx6m/: Makefile.am  atoms.txt  fifos.txt  main.c  setup.c  setup.h  states.txt
wifitx6m/: Makefile.am  atoms.txt  code_placement.txt  debug_atoms.txt  fifos.txt  main.c  setup.c  setup.h  states.txt  trace.c
